# api/swagger/swagger.yaml
@@ -28,7 +28,7 @@ paths:
       description: "Returns list of user profiles to the caller"
       responses:
         200:
-          description: Success
+          description: OK
           schema:
             # a pointer to a definition
             $ref: "#/definitions/UserProfile"
@@ -51,13 +51,36 @@ paths:
           $ref: "#/definitions/UserProfile"
       responses:
         201:
-          description: "Success"
+          description: OK          
           schema:
             # a pointer to a definition
             $ref: "#/definitions/UserProfile"
         405:
           description: "Invalid input"
           
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      tags:
+      - userprofile
+      summary: Update a user specified by the id
+      description: Update a user specified by the id
+      parameters:
+      - name: userProfile
+        in: body
+        required: true
+        schema:
+          # a pointer to a definition
+          $ref: "#/definitions/UserProfile"
+      responses:
+        200:
+          description: OK
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/UserProfile"
         # responses may fall through to errors
         default:
           description: Error
@@ -77,7 +100,7 @@ paths:
         format: uuid
       responses:
         200:
-          description: "Success"
+          description: OK
           schema:
             # a pointer to a definition
             $ref: "#/definitions/UserProfile"
@@ -85,12 +108,31 @@ paths:
           description: "Invalid id supplied"
         404:
           description: "User not found"
-          
         # responses may fall through to errors
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+    delete:
+      tags:
+      - userprofile
+      summary: "Deletes a user specified by the id"
+      description: "Deletes a user specified by the id"
+      parameters:
+      - name: id
+        in: path
+        required: true
+        type: string
+        format: uuid
+      responses:
+        200:
+          description: OK
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -100,24 +142,34 @@ definitions:
     properties:
       id:
         type: string
+        description: Unique identifier for a user
       email:
         type: string
+        description: Email address of the user
       displayName:
         type: string
+        description: Friendly display name as chosen by the user
       firstName:
         type: string
+        description: Users' first name
       lastName:
         type: string
+        description: User's last name
       description:
         type: string
+        description: Optional field for user's summary of themselves
       picture:
         type: string
+        description: URL for user's picture
       fbid:
         type: string
+        description: user's facebook Id
       created:
         type: string
+        description: Timestamp for when the user record was created
       devices:
         type: array
+        description: List of devices used by the user
         items:
           type: string
   ErrorResponse:
